== 2.0 / 2014-MM-DD

* Major enhancements:
  * Dropped support for Ruby 1.8.
  * Removed all deprecated methods and constant handlers.

* Minor enhancements:

* Bug fixes:

* Tooling changes:

== 1.7.1 / 2014-06-12

* Minor enhancements:
  * Renamed Color::RGB::BeccaPurple to Color::RGB::RebeccaPurple as stipulated
    by Eric Meyer. http://meyerweb.com/eric/thoughts/2014/06/19/rebeccapurple/
    For purposes of backwards compatibility, the previous name is still
    permitted, but its use is strongly discouraged, and it will be removed in
    the Color 2.0 release.

== 1.7 / 2014-06-12

* Minor enhancements:
  * Added Color::RGB::BeccaPurple (#663399) in honour of Rebecca Meyer, the
    daughter of Eric Meyer, who passed away on the 7th of June, 2014. Her
    favourite colour was purple. #663399becca
    https://twitter.com/meyerweb/status/476089708674428929
    http://www.zeldman.com/2014/06/10/the-color-purple/
    http://discourse.specifiction.org/t/name-663399-becca-purple-in-css4-color/225

* Bug fixes:
  * Changed the homepage in the gem to point to github.com instead of
    RubyForge, which has been shut down. Fixes #10, reported by @voxik.

== 1.6 / 2014-05-19

* Major enhancements:
  * Aaron Hill (@armahillo) implemented the CIE Delta E 94 method by which an
    RGB colour can be asked for the closest matching colour from a list of
    provided colours. Fixes #5.
  * To implement #closest_match and #delta_e94, conversion methods for sRGB to
    XYZ and XYZ to L*a*b* space were implemented. These should be considered
    experimental.

* Tooling fixes:
  * Ensured that the gem manifest was up-to-date. Fixes #4 reported by @boutil.
    Thanks!
  * Fixed problems with Travis builds. Note that Ruby 1.9.2 is no longer
    tested. Rubinius remains in a “failure-tolerated” mode.
  * Color 1.6 is, barring security patches, the last release of Color that will
    support Ruby 1.8.

== 1.5.1 / 2014-01-28

* color 1.5 was a yanked release.

* Minor enhancements: